--- a/src/landing.scss
+++ b/src/landing.scss
@@ -3,6 +3,7 @@ $nav-color: rgba(254, 215, 102, 1);
 $text-color: rgba(0, 159, 183, 1);
 $body-background-1: rgba(230, 230, 234, 1);
 $body-background-2: rgba(244, 244, 248, 1);
+$body-background-3: rgb(255, 255, 255);
 
 .landing-page {
   overflow-y: auto;
@@ -14,15 +15,17 @@ $body-background-2: rgba(244, 244, 248, 1);
   
   .quick-view-articles{
     display: flex;
-    // flex-flow: wrap;
     justify-content: space-between;
   }
+ 
   article.mini-jumbotron {
+    height: 100%;
     background-color:$heading-color;
-    color: $body-background-1;
+    color: $body-background-3;
     a {
-      color: $body-background-1;
+      color:$body-background-3;
       margin: 0;
+      font-size: 1.25em;
     }
     a:hover{
       cursor: pointer;
@@ -37,7 +40,7 @@ $body-background-2: rgba(244, 244, 248, 1);
     p {
       // font-family: 'Caveat', cursive;
       font-family: 'Roboto Condensed', sans-serif;
-      font-size: 1em;
+      font-size: 1.25em;
       margin: 0.25rem;
     }
     padding: 0.75rem;
@@ -46,6 +49,10 @@ $body-background-2: rgba(244, 244, 248, 1);
     h4,h5,h6{
       padding: 0;
       margin: 0;
+    }
+    .tagname {
+      float: right;
+      font-size: 1.25em;
     }
   }
   
