--- a/src/stlye.scss
+++ b/src/stlye.scss
@@ -3,6 +3,7 @@ $nav-color: rgba(254, 215, 102, 1);
 $text-color: rgba(0, 159, 183, 1);
 $body-background-1: rgba(230, 230, 234, 1);
 $body-background-2: rgba(244, 244, 248, 1);
+$body-background-3: rgb(255, 255, 255);
 
 .App {
   // font-family: 'Cute Font', cursive;
@@ -19,13 +20,16 @@ $body-background-2: rgba(244, 244, 248, 1);
 .landing-hello {
   text-align:center;
   font-size: 3em;
+  // line-height: 7em;
   color: $nav-color;
   span {
     font-size: 1.125em;
     font-weight:900;
-    &:hover {
-      color: $heading-color;
-    }
+    text-decoration: underline;
+    // color: $heading-color;
+    // &:hover {
+    //   // 
+    // }
   }
   // color: $body-background-1;
 }
@@ -40,7 +44,7 @@ body{
     color:$nav-color;
     margin: 0.5rem;
     // margin-right: 0;//exception to make the menu top smaller
-    padding: 0.5rem;
+    padding: 0.25rem; //any chnage to this should follow up with ul.navigation-li-a
   }
   a:hover{
     cursor: pointer;
@@ -50,7 +54,7 @@ body{
   a:focus{
     color: $heading-color;
     background-color: $nav-color;
-    outline: 0.15rem solid  $heading-color !important;
+    outline: 0.25rem solid  $heading-color !important;
   }
   h1,h2,h3,h4,h5,h6 {
     color:$heading-color
@@ -85,7 +89,7 @@ ul.navigation {
     flex: 0 0 auto;
     a{
       text-decoration: none;
-      padding-bottom: 0.75rem;//exception
+      padding-bottom: 0.5rem;//exception
     }
   }
   background-color: $heading-color;
@@ -121,7 +125,7 @@ footer {
   flex-wrap: wrap;
   justify-content: space-around;
   iframe{
-    border: 0.05rem solid $nav-color;
+    // border: 0.05rem solid $nav-color;
     // width: 45%;
     margin: 0.5rem;
   }
@@ -133,7 +137,7 @@ footer {
   padding: 0.75rem;
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 600;
-  background-color:$body-background-2;
+  background-color:$body-background-3;
 }
 
 
@@ -143,7 +147,6 @@ footer {
     display: flex; 
     align-items: center; 
     justify-content: center; 
-    border: 2px solid; 
     margin: 1em 0; 
     padding: 1em;
   }
